<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/charging"
        android:icon="@drawable/baseline_battery_charging_full_24"
        android:title="@string/charging"/>

    <item
        android:id="@+id/discharging"
        android:icon="@drawable/sharp_battery_change_24"
        android:title="@string/discharging"/>

    <item
        android:id="@+id/quickSetting"
        android:icon="@drawable/sharp_admin_panel_settings_24"
        android:title="@string/quick_setting"/>

    <item
        android:id="@+id/alarm"
        android:icon="@drawable/alarm_add"
        android:title="@string/battery_alarm"/>

    <item
        android:id="@+id/history"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history"/>
</menu>