<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvDischargingSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discharging_speed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@id/tvDischargingSpeed">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <com.juanarton.core.customview.CustomMaterialCardView
                android:id="@+id/cvActiveDrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginEnd="5dp"
                app:contentTextColor="?attr/colorPrimary"
                app:contentMarginTop="10dp"
                app:cardElevation="0dp"
                app:titleText="@string/active_drain_hour"/>

            <com.juanarton.core.customview.CustomMaterialCardView
                android:id="@+id/cvAwakeSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                app:contentTextColor="?attr/colorPrimary"
                app:contentMarginTop="10dp"
                app:cardElevation="0dp"
                app:titleText="@string/awake"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.juanarton.core.customview.CustomMaterialCardView
                android:id="@+id/cvIdleDrain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="5dp"
                app:contentTextColor="?attr/colorPrimary"
                app:contentMarginTop="10dp"
                app:cardElevation="0dp"
                app:iconDescription="@string/charging_voltage_icon"
                app:titleText="@string/idle_drain_hour"/>

            <com.juanarton.core.customview.CustomMaterialCardView
                android:id="@+id/cvDeepSleepSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                app:contentTextColor="?attr/colorPrimary"
                app:contentMarginTop="10dp"
                app:cardElevation="0dp"
                app:iconDescription="@string/charging_voltage_icon"
                app:titleText="@string/deep_sleep"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>