<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="25dp"
            app:strokeWidth="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.scwang.wave.MultiWaveHeader
                    android:id="@+id/waveAnimation"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignParentBottom="true"
                    android:scaleY="-1"
                    app:mwhCloseColor="?attr/colorPrimary"
                    app:mwhStartColor="?attr/colorPrimary"
                    app:mwhVelocity="1"
                    app:mwhWaveHeight="25dp"
                    app:mwhWaves="PairWave" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvBatteryPercentage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/text"
                        android:textSize="27sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBatteryCapacity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/text"
                        android:textSize="11sp" />
                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <com.juanarton.core.customview.CustomMaterialCardView
                android:id="@+id/cvVoltage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="5dp"
                app:contentUnit="@string/volt_unit"
                app:cardElevation="0dp"
                app:iconDescription="@string/charging_voltage_icon"
                app:iconSrc="@drawable/bolt"
                app:titleText="@string/voltage"/>

            <com.juanarton.core.customview.CustomMaterialCardView
                android:id="@+id/cvChartInfo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                app:cardElevation="0dp"
                app:iconDescription="@string/charging_temperature_icon"
                app:iconSrc="@drawable/temperature"
                app:titleText="@string/temperature"/>

            <com.juanarton.core.customview.CustomMaterialCardView
                android:id="@+id/cvChartInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                app:cardElevation="0dp"
                app:iconDescription="@string/battery_power_icon"
                app:iconSrc="@drawable/power"
                app:titleText="@string/power"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>