<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.activity.setting.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/tvGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/general"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvGeneral"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="?attr/cardBackgroundColor"
            app:cardCornerRadius="20dp"
            app:contentPadding="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvGeneral"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/theme"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvThemeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:text="@string/change_app_theme"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tvTheme"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgThemeSelector"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvThemeDescription"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/light"
                        app:chipBackgroundColor="@drawable/bg_chip_state_list"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorPrimary" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/dark"
                        app:chipBackgroundColor="@drawable/bg_chip_state_list"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorPrimary" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipSystem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/system"
                        app:chipBackgroundColor="@drawable/bg_chip_state_list"
                        app:chipCornerRadius="20dp"
                        app:chipStrokeColor="?attr/colorPrimary" />
                </com.google.android.material.chip.ChipGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>